sistemato bug orario consegna+z-index

--- a/boolivery/resources/sass/app.scss
+++ b/boolivery/resources/sass/app.scss
@@ -311,6 +311,7 @@ footer {
           right: 0;
           border-radius: 15px;
           border: 1px solid orange;
+          z-index:999;
 
 
           ul {
